# Catalogo_VR

./: .gitignore  E2E_PASSWORD_RESET_CHECKLIST.md  README_DEV.md  contex.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt  test_users.py  update_role.py
backend/alembic/: env.py
backend/alembic/versions/: 0457213d6fe2_add_offers_and_themes.py  44a86e37df96_initial.py  5d2b0c9f4e11_add_audit_logs.py  7f4a2b1c8d90_add_login_audit_fields.py  7ffb0ddfe4e1_add_rol_usuario_to_audit_logs.py  9c1e4d2a7b33_add_public_events_and_whatsapp.py  a1b2c3d4e6f7_add_password_reset_tokens.py  c2d660c49fbc_add_origen_to_ventas.py  c3f7b2e9a441_add_usuario_activo.py  d1a2b3c4e5f6_add_producto_imagenes.py  e8f1c2d3b4a5_add_offers_and_themes.py  (+1 more)
backend/api/: __init__.py  routes_admin.py  routes_admin_audit.py  routes_auth.py  routes_catalog.py  routes_me.py  routes_public_catalog.py  routes_sales.py  routes_tenant.py
backend/core/: config.py  database.py  deps.py  email.py  security.py  storage.py
backend/crud/: crud_audit.py  crud_auth.py  crud_catalog.py  crud_offers.py  crud_public.py  crud_public_events.py  crud_sales.py  crud_tenant.py
backend/middleware/: __init__.py  audit_middleware.py
backend/models/: __init__.py  audit_log.py  catalog.py  password_reset.py  public_event.py  sales.py  tenant.py
backend/schemas/: audit_schema.py  auth_schema.py  catalog_schema.py  public_event_schema.py  sales_schema.py  tenant_schema.py
backend/scripts/: __init__.py
backend/tests/: test_storage.py
(+67 files in other folders)
