[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tienda-backend"
version = "0.1.0"
description = "Backend FastAPI para Tienda SaaS"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "api",
  "api.*",
  "core",
  "core.*",
  "crud",
  "crud.*",
  "middleware",
  "middleware.*",
  "models",
  "models.*",
  "schemas",
  "schemas.*"
]
